docbook-dsssl (1.78-2) unstable; urgency=low

  * fix README.Debian; closes: #185322
  * debconf: "Show contents of comments?" wording fixed;
    closes: #185124

 -- Adam Di Carlo <aph@debian.org>  Thu, 20 Mar 2003 20:47:53 -0500

docbook-dsssl (1.78-1) unstable; urgency=low

  * new upstream release; a number of problems are either fixed in this
    release or otherwise unreproducable; closes: #176283, #75000
  * postinst: if in siteconfig.dsl there is a setting commented out, leave
    it alone (e.g., don't re-enable and set it)
  * debconf: print papersize now allows user to specify A4, A4landscape,
    USletter, USlandscape, or to use 'paperconf' from libpaperg
  * debconf: fix nasty error causing priorities to be wrong and questions
    not to be asked
  * debconf: lower the priority of all questions except for papersize

 -- Adam Di Carlo <aph@debian.org>  Wed, 19 Feb 2003 09:29:51 -0500

docbook-dsssl (1.77-cvs.2003.02.06) unstable; urgency=low

  * more upstream fixes
  * /usr/share/sgml/docbook/stylesheet/dsssl/modular/README symlink to
    README in the docs; closes: #149880
  * postinst: fix a quoting problem; closes: #178020
  * debconf: question about HTML extension made low priority, since
    ".html" is definately the standard; in fact, I only offer ".htm" since
    that's the upstream default; closes: #178003
  * also make make the following debconf questions low priority:
    use-id-as-filename, body-start-indent, title-font family; change some
    multiselects into select; closes: #179554
  * debconf/postinst: I was doing this:
      (define %title-font-family% "%body-font-family%")
    rather than
      (define %title-font-family% %body-font-family%)
    closes: #178617

 -- Adam Di Carlo <aph@debian.org>  Thu,  6 Feb 2003 18:38:59 -0500

docbook-dsssl (1.77-cvs.2003.01.22) unstable; urgency=low

  * CVS snapshot with post 1.77 fixes, the following bugs are fixed either
    in this version or earlier: 
    closes: #36886, #37098, #79432