@@ -3,8 +3,9 @@ docbook-dsssl (1.78-2) unstable; urgency=low
   * fix README.Debian; closes: #185322
   * debconf: "Show contents of comments?" wording fixed;
     closes: #185124
+  * i18n of debian/templates; closes: #184870
 
- -- Adam Di Carlo <aph@debian.org>  Thu, 20 Mar 2003 20:47:53 -0500
+ -- Adam Di Carlo <aph@debian.org>  Thu, 20 Mar 2003 22:45:05 -0500
 
 docbook-dsssl (1.78-1) unstable; urgency=low
 
